maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: Boolean.type does not take parameters
  def testgauche=Boolean {
                         ^